--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Matteo Sesia"
-  avatar           : "profile.png"
+  avatar           : "Matteo_Sesia.jpg"
   bio              : "Assistant Professor at<br><a style='color: black;' href='https://www.marshall.usc.edu/departments/data-sciences-and-operations'>DSO Department, USC Marshall</a>"
   location         : "Los Angeles, CA"
   employer         :
