--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,9 @@ main:
   - title: "Research"
     url: /research/
 
+  - title: "People"
+    url: /people/
+
 #  - title: "Talks"
 #    url: /talks/    
 
