--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Matteo Sesia"
   avatar           : "Matteo_Sesia.jpg"
-  bio              : "Assistant Professor at<br><a style='color: black;' href='https://www.marshall.usc.edu/departments/data-sciences-and-operations'>DSO Department, USC Marshall</a>"
+  bio              : "Statistician and Data Scientist. Assistant Professor at the University of Southern California."
   location         : "Los Angeles, CA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
