--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "People"
-    url: /people/
+  - title: "Group"
+    url: /group/
 
 #  - title: "Talks"
 #    url: /talks/    
