--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar : "/assets/images/headshot.jpg"
   bio    : >
     Statistician and Data Scientist.  
-    Assistant Professor at the University of Southern California.
+    Associate Professor at the University of Southern California.
 
   links:
     - label: "Los Angeles"
